# Summer2019_Group3_Pokemon

./: City.docx  README.md
Document/: GDD.docx
Pokemon/: CMakeLists.txt
Pokemon/Classes/: AppDelegate.cpp  Attack.cpp  Attack.h  Bag.cpp  Bag.h  BattleScene.cpp  BattleScene.h  Buttons.cpp  Buttons.h  Charmander.cpp  Charmander.h  Conversation.cpp  Conversation.h  HelloWorldScene.cpp  HelloWorldScene.h  Item.cpp  Item.h  Lake.cpp  Lake.h  Model.cpp  Model.h  MyObject.cpp  MyObject.h  NPC.cpp  NPC.h  Pokemon.cpp  Pokemon.h  PokemonCenter.cpp  PokemonCenter.h  Popup.cpp  Popup.h  ResourceManager.cpp  ResourceManager.h  Route1.h  Skill.cpp  Skill.h  Tackle.cpp  Tackle.h  TestMap.cpp  TestMap.h  (+4 more)
Pokemon/Classes/Item/: Ether.cpp  Ether.h  FireStone.cpp  FireStone.h  HP.cpp  HP.h  LeafStone.cpp  LeafStone.h  MaxPotion.cpp  MaxPotion.h  MaxRevive.cpp  MaxRevive.h  PP.cpp  PP.h  Potion.cpp  Potion.h  Revive.cpp  Revive.h  Stone.cpp  Stone.h  SuperPotion.cpp  SuperPotion.h  ThunderStone.cpp  ThunderStone.h  WaterStone.cpp  WaterStone.h  revival.cpp  revival.h
Pokemon/Classes/Item/HP/: MaxPotion.cpp  MaxPotion.h  Potion.cpp  Potion.h  SuperPotion.cpp  SuperPotion.h
Pokemon/Classes/Item/Revival/: MaxRevive.cpp  MaxRevive.h  Revive.cpp  Revive.h
Pokemon/Classes/Item/Stone/: FireStone.cpp  FireStone.h  LeafStone.cpp  LeafStone.h  ThunderStone.cpp  ThunderStone.h  WaterStone.cpp  WaterStone.h
Pokemon/Classes/Map/: Cave.cpp  Cave.h  ChampionLeague.cpp  ChampionLeague.h  Championleague.cpp  Championleague.h  City.cpp  City.h  House.cpp  House.h  Lab.cpp  Lab.h  Lake.cpp  Lake.h  PokemonCenter.cpp  PokemonCenter.h  Route1.cpp  Route1.h  Route2.cpp  Route2.h  Town.cpp  Town.h  VictoryRoad.cpp  VictoryRoad.h  Victoryroad.cpp  Victoryroad.h
Pokemon/Classes/NPC/: CaveNPC.cpp  CaveNPC.h  ChampionNPC.cpp  ChampionNPC.h  CityNPC.cpp  CityNPC.h  DrSamuelOak.cpp  DrSamuelOak.h  Joy.cpp  Joy.h  KhuongDuyNPC.cpp  KhuongDuyNPC.h  LakeNPC.cpp  LakeNPC.h  MinhVuongNPC.cpp  MinhVuongNPC.h  RoadNPC.cpp  RoadNPC.h  Route2NPC.cpp  Route2NPC.h  RouteNPC.cpp  RouteNPC.h  TanNgocNPC.cpp  TanNgocNPC.h  TanTaiNPC.cpp  TanTaiNPC.h  salesman.cpp  salesman.h
Pokemon/Classes/Pokemon/: Bayleef.cpp  Bayleef.h  Beautifly.cpp  Beautifly.h  Blastoise.cpp  Blastoise.h  Celebi.cpp  Celebi.h  Charizard.cpp  Charizard.h  Charmander.cpp  Charmander.h  Charmeleon.cpp  Charmeleon.h  Chikorita.cpp  Chikorita.h  Dragonair.cpp  Dragonair.h  Dragonite.cpp  Dragonite.h  Eevee.cpp  Eevee.h  Electrike.cpp  Electrike.h  Entei.cpp  Entei.h  Farfetchd.cpp  Farfetchd.h  Feebas.cpp  Feebas.h  Flareon.cpp  Flareon.h  Garchomp.cpp  Garchomp.h  Gardevoir.cpp  Gardevoir.h  Greninja.cpp  Greninja.h  Jolteon.cpp  Jolteon.h  (+50 more)
Pokemon/Classes/Scene/: About.cpp  About.h  BattleScene.cpp  BattleScene.h  BuyItem.cpp  BuyItem.h  Loading.cpp  Loading.h  MainMenu.cpp  MainMenu.h  MyBag.cpp  MyBag.h
Pokemon/Classes/Skill/: Bite.cpp  Bite.h  BlastBurn.cpp  BlastBurn.h  BodySlam.cpp  BodySlam.h  Bubble.cpp  Bubble.h  DracoMeteor.cpp  DracoMeteor.h  DragonClaw.cpp  DragonClaw.h  DragonCut.cpp  DragonCut.h  Ember.cpp  Ember.h  EnergyBall.cpp  EnergyBall.h  FireBlast.cpp  FireBlast.h  FirePunch.cpp  FirePunch.h  Fly.cpp  Fly.h  Gust.cpp  Gust.h  HydroPump.cpp  HydroPump.h  LeafStorm.cpp  LeafStorm.h  LeechSeed.cpp  LeechSeed.h  Peck.cpp  Peck.h  QuickAttack.cpp  QuickAttack.h  RazorLeaf.cpp  RazorLeaf.h  Scratch.cpp  Scratch.h  (+24 more)
Pokemon/Resources/res/: Button.rar  Data.json
Pokemon/Resources/res/Background/: battle-background-grass.tmx
Pokemon/Resources/res/Battle/: battle-background-grass.tmx  grass-tileset.tsx  healthbar_enemy.tsx
Pokemon/Resources/res/Item/: item.txt
Pokemon/Resources/res/Map/: 0.tsx  250px-Cerulean_City_FRLG.tsx  25923.tsx  3736.tsx  3768.tsx  3788.tsx  3808.tsx  5.tsx  531px-Pokemon_FRLG_PewterCity.tsx  58ea6161e4c5f.tsx  62316.tsx  9.tsx  Cave.tmx  City.tmx  Game Boy Advance - Pokemon FireRed LeafGreen - One Island.tsx  HelloWorld.tsx  Hoenn_Route_102_ORAS.tsx  HomeTown.tmx  HouseMap.tmx  Lab.tmx  League.tmx  PokemonCenter.tmx  Road.tmx  Route1Map.tmx  Route1MapTree.tmx  Route1MapTree1.tmx  TienSiHome.tmx  Tiny32-Complete-Spritesheet_0.tsx  TownMap.tmx  TownMapHouse.tmx  asd.tsx  bag.tmx  championleague.tmx  city.tmx  city.tsx  city2.tmx  d2twtha-9929eac5-3918-4922-9a55-d49508047cc0.tsx  d2twttt-fe1e0648-ccd7-43d2-b722-e5e12048bb59.tsx  d4yvc9o-e8acf633-c07b-4729-9820-ec1639eb3baf.tsx  e7ezd2.tsx  (+26 more)
Pokemon/Resources/res/Skill/Bite/: Bite.plist
Pokemon/Resources/res/Skill/BlastBurn/: BlastBurn.plist
Pokemon/Resources/res/Skill/BodySlam/: BodySlam.plist
Pokemon/Resources/res/Skill/Bubble/: Bubble.plist
Pokemon/Resources/res/Skill/DracoMeteor/: DracoMeteor.plist
Pokemon/Resources/res/Skill/DragonClaw/: DragonClaw.plist
Pokemon/Resources/res/Skill/DragonCut/: DragonCut.plist
Pokemon/Resources/res/Skill/Ember/: Ember.plist
Pokemon/Resources/res/Skill/EnergyBall/: EnergyBall.plist
Pokemon/Resources/res/Skill/FireBlast/: FireBlast.plist
Pokemon/Resources/res/Skill/FirePunch/: FirePunch.plist
Pokemon/Resources/res/Skill/Fly/: Fly.plist
Pokemon/Resources/res/Skill/Gust/: Gust.plist
Pokemon/Resources/res/Skill/LeafStorm/: LeafStorm.plist
Pokemon/Resources/res/Skill/LeechSeed/: LeechSeed.plist
Pokemon/Resources/res/Skill/Peck/: Peck.plist
Pokemon/Resources/res/Skill/QuickAttack/: QuickAttack.plist
Pokemon/Resources/res/Skill/RazorLeaf/: RazorLeaf.plist
Pokemon/Resources/res/Skill/Scratch/: Scratch.plist
Pokemon/Resources/res/Skill/SolarBeam/: SolarBeam.plist
Pokemon/Resources/res/Skill/Spark/: Spark.plist
Pokemon/Resources/res/Skill/Surf/: Surf.plist
Pokemon/Resources/res/Skill/Tackle/: Tackle.plist
Pokemon/proj.android/app/: AndroidManifest.xml  build.gradle
Pokemon/proj.android/app/jni/: Android.mk
Pokemon/proj.ios_mac/Pokemon.xcodeproj/: project.pbxproj
Pokemon/proj.ios_mac/ios/: Info.plist
Pokemon/proj.ios_mac/mac/: Info.plist
Pokemon/proj.win32/: BUTTONS.CPP  MyObject.cpp  MyObject.h  Pokemon.cpp  Pokemon.h  Pokemon.sln  Pokemon.vcxproj  Pokemon.vcxproj.filters  main.cpp
(+104 files in other folders)
